--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/662ba1dd7d.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="styles.css">
     <title>Rephrasing recap</title>
 </head>
 <body>
-    <main>
-
+    <main class="mode-selector">
+        <button class="selector" id="sentences">
+            <p><i class="fa-solid fa-list" style="color: #ffffff;"></i></p>
+            Sentences
+        </button>
+        <button class="selector" id="exam" onclick="window.location.href = 'test.html'">
+            <p><i class="fa-solid fa-list-check" style="color: #ffffff;"></i></p>
+            Exam
+        </button>
     </main>
 </body>
 </html>
