WIP: reformat client folder structure

--- a/client/html/sentences.html
+++ b/client/html/sentences.html
@@ -12,7 +12,7 @@
 
     <script src="https://kit.fontawesome.com/662ba1dd7d.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="sentences.css">
+    <link rel="stylesheet" href="../css/sentences.css">
 
     <title>Sentences</title>
 </head>
