--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://kit.fontawesome.com/662ba1dd7d.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Rephrasing recap</title>
 </head>
 <body>
@@ -21,10 +21,11 @@
             <p><i class="fa-solid fa-list" style="color: #ffffff;"></i></p>
             Sentences
         </button>
-        <button class="selector" id="exam" onclick="window.location.href = 'test.html'">
+        <button class="selector" id="exam">
             <p><i class="fa-solid fa-list-check" style="color: #ffffff;"></i></p>
             Exam
         </button>
     </main>
+    <script src="js/main.js"></script>
 </body>
 </html>
