fix client docker not loading env variables and minor improvements

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--
+      env.ts injects env variables into the React server after build.
+    -->
+    <script src='/env.js'></script>
     <title>Rephrasing</title>
   </head>
   <body>
